<resources>
    <string name="app_name">Ветераны</string>

    <string name="input_login_str">Введите логин</string>
    <string name="input_password_str">Введите пароль</string>
    <string name="enter_str">Войти</string>
    <string name="registration_str">Зарегистрироваться</string>
    <string name="registration_str_hi">Регистрация</string>
    <string name="reg_login">Введите логин</string>
    <string name="reg_pas">Введите пароль</string>
    <string name="reg_email">Введите емаил</string>
    <string name="reg_click_button">Зарегистрироваться</string>
    <string name="reg_pas_again">Повторите пароль</string>
    <string name="input_name_str">Введите название истории</string>
    <string name="input_article_str">Расскажите свою историю</string>



    <string name="header_temporary">Заголовок статьи</string>
    <string name="article_teamp">Кузьменко Николай Егорович родился 19.12.1923г. Был призван Степновским РВК 12.03.1942 года. Демобилизован 17.03.1948г. Боевой путь солдата начался с учебы в г.Орджоникидзе, где готовили десантников. Так он попал в 10 Гвардейскую парашютную десантную бригаду. Участвовал в боях за г.Малгобек, г.Нальчик. Ранение получил под Черновцами в Западной Украине. В 1943 году был участником британо – советской операции «Согласие» в Иране по защите нефтяных месторождений Баку. Командовал операцией генерал-майор Федор Иванович Толбухин, командующий 3-м Украинским фронтом. Окончание войны Николай Егорович встретил в Австрии г.Вена. После демобилизации возвратился в родное село Варениковское Степновского района. Женился на Левашовой Федосии Яковлевне. Работали в колхозе. Растили 3 детей - Василия, Александра, Валентину. Награжден Орденом Отечественной войны II степени, Медалью «За доблесть и отвагу в Великой Отечественной войне», Юбилейными медалями «Двадцать лет Победы в Великой Отечественной войне 1941-1945 гг.», «Тридцать лет Победы в Великой Отечественной войне 1941-1945 гг.», «Сорок лет Победы в Великой Отечественной войне 1941-1945 гг.», «Пятьдесят лет Победы в Великой Отечественной войне 1941-1945 гг.», «Шестьдесят лет Победы в Великой Отечественной войне 1941-1945 гг.», Медалью «Ветеран Труда» Умер Кузьменко Николай Егорович 23.03.1986г.\n\n\n</string>
    <string name="name_article_str">Название статьи</string>

    <string name="puslish_article_str">Рассказать историю</string>
    <string name="title_auto">Авторизация</string>
    <string name="error_input_show_str">Введите 3 символа</string>
    <string name="fragment_reg_str">Регистрация</string>

    <string name="ask_exit_title_str">Выход</string>
    <string name="ask_exit_yes">Да</string>
    <string name="ask_exit_no">Нет</string>
    <string name="ask_exit_str">Вы точно хотите выйти?</string>
    <string name="reg_ok_str">Вы зарегистрированы</string>
    <string name="reg_error_str">Ошибка регистрации</string>
    <string name="auto_error_str">Ошибка авторизации</string>
    <string name="menu_more_str">More</string>
    <string name="create_article_str">Опубликовать статью</string>
    <string name="show_article_my_str">Посмотреть свои статьи</string>
    <string name="search_class_str">Искать статьи по классификации</string>
    <string name="exit_str">Выйти из аккаунта</string>
    <string name="title_wall_str">Свежие публикации</string>
    <string name="title_create_article_str">Создание статьи</string>
    <string name="success_str">Ваша история опубликована</string>
    <string name="filed_str">Ошибка публикации</string>
    <string name="logout_title_str">Разлогинится</string>
    <string name="logout_text_str">Вы точно хотите выйти из аккаунта?</string>
    <string name="title_user_article_str">Ваши статьи</string>
    <string name="wall_all_str">Все публикации</string>

</resources>
